# smilei_ws

./: README.md  config_para_otra_maquina.py  setup_current_machine.py  test_udp.py  test_udp_simple.py
src/smilei_debug_tools/: package.xml  setup.cfg  setup.py
src/smilei_debug_tools/smilei_debug_tools/: motor_data_publisher.py  velocity_publisher.py
src/smilei_state_machine/: README.md  package.xml  setup.cfg  setup.py
src/smilei_state_machine/config/: remote_teleop_config.py  robot_params.yaml
src/smilei_state_machine/launch/: smilei_state_machine.launch.py  state_machine.launch.py  udp_connection.launch.py
src/smilei_state_machine/scripts/: test_remote_teleoperation.py  test_udp_receiver.py  test_udp_sender.py
src/smilei_state_machine/smilei_state_machine/: __init__.py  hardware_manager.py  original_state_machine.py  pd_control_node.py  robot_params.py  send_state_command.py  smilei_state_machine_node.py  state_machine.py  udp_connection_node.py  westwood_motor_client.py
src/smilei_state_machine/smilei_state_machine/behaviors/: __init__.py  disable_robot.py  enable_robot.py  gravity_utils.py  home_position.py  local_teleoperation.py  remote_teleoperation.py  say_hello.py  zero_position.py
src/westwood_motor_control_sdk_wrapper/: CMakeLists.txt  README.md  package.xml
src/westwood_motor_control_sdk_wrapper/config/: server_params.yaml
src/westwood_motor_control_sdk_wrapper/launch/: dual_usb_motor_server.launch.py  westwood_motor_server.launch.py
src/westwood_motor_interfaces/: CMakeLists.txt  README.md  package.xml
(+12 files in other folders)
