<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smilei_state_machine</name>
  <version>0.1.0</version>
  <description>Máquina de estados para el robot SMILEi usando py_trees</description>
  <maintainer email="a00835705@tec.mx">Jordan Palafox</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>westwood_motor_interfaces</depend>
  <depend>westwood_motor_control_sdk_wrapper</depend>
  
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
